--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,7 @@ datastore = "1.1.1"
 hiltNavigationCompose = "1.2.0"
 navigationCompose = "2.9.6"
 uiTextGoogleFonts = "1.9.4"
+coil = "2.5.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -63,6 +64,9 @@ hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-com
 # -- navigation --
 navigation-compose = {group = "androidx.navigation", name = "navigation-compose"}
 androidx-compose-ui-text-google-fonts = { group = "androidx.compose.ui", name = "ui-text-google-fonts", version.ref = "uiTextGoogleFonts" }
+
+coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil" }
+
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
