--- a/gradle.properties
+++ b/gradle.properties
@@ -19,5 +19,10 @@ android.useAndroidX=true
 kotlin.code.style=official
 # Enables namespacing of each library's R class so that its R class includes only the
 # resources declared in the library itself and none from the library's dependencies,
+# ...existing code...
+
+# KSP Configuration - Disable incremental processing to fix FileAlreadyExistsException
+ksp.incremental=false
+ksp.incremental.log=false
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
