handle logic add to cart

--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Nov 19 21:55:24 ICT 2025
-sdk.dir=/home/quangnam/Android/Sdk
+#Sat Nov 22 18:13:04 ICT 2025
+sdk.dir=C\:\\Users\\mitec\\AppData\\Local\\Android\\Sdk
