--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -67,6 +67,8 @@ androidx-compose-ui-text-google-fonts = { group = "androidx.compose.ui", name = 
 
 coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil" }
 
+moshi-kotlin-codegen = { module = "com.squareup.moshi:moshi-kotlin-codegen", version.ref = "moshi" }
+
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
