--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Nov 22 18:13:04 ICT 2025
-sdk.dir=C\:\\Users\\mitec\\AppData\\Local\\Android\\Sdk
+#Thu Nov 27 23:11:37 ICT 2025
+sdk.dir=/home/huynguyen/Android/Sdk
